force-app/main/default/objects/Product2/fields/Brimful_capacity__c.field-meta.xml
<CustomField>
    <fullName>Brimful_capacity__c</fullName>
    <description>Rebose__c in vidrala org</description>
    <label>Brimful capacity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>