force-app/main/default/objects/Product2/fields/Cat_logo__c.field-meta.xml
<CustomField>
    <fullName>Cat_logo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>from vidrala spain  org</description>
    <label>In Catalog</label>
    <type>Checkbox</type>
</CustomField>