force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Grupo_Familia__c in vidrala org</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguas</fullName>
            </value>
            <value>
                <fullName>Alimentación</fullName>
            </value>
            <value>
                <fullName>Cava, espumosos y sidras</fullName>
            </value>
            <value>
                <fullName>Cervezas</fullName>
            </value>
            <value>
                <fullName>Conservas</fullName>
            </value>
            <value>
                <fullName>Licores</fullName>
            </value>
            <value>
                <fullName>Refrescos</fullName>
            </value>
            <value>
                <fullName>Vinos</fullName>
            </value>
            <value>
                <fullName>Vinos de Oporto</fullName>
            </value>
            <value>
                <fullName>Zumos</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>