force-app/main/default/objects/Product2/fields/Colour__c.field-meta.xml
<CustomField>
    <fullName>Colour__c</fullName>
    <label>Colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fifty_Colour</valueSetName>
    </valueSet>
</CustomField>