force-app/main/default/objects/Product2/fields/Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date__c</fullName>
    <description>Alta__c in spanish org</description>
    <label>Creation Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Year</valueSetName>
    </valueSet>
</CustomField>