force-app/main/default/objects/Product2/fields/Diameter__c.field-meta.xml
<CustomField>
    <fullName>Diameter__c</fullName>
    <description>previously Dia__c</description>
    <label>Diameter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>