force-app/main/default/objects/Product2/fields/Drawing__c.field-meta.xml
<CustomField>
    <fullName>Drawing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drawing ID</label>
    <referenceTo>Drawing__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>