force-app/main/default/objects/Product2/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Baja__c from the Spanish org</description>
    <label>End Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Year</valueSetName>
    </valueSet>
</CustomField>