force-app/main/default/objects/Product2/fields/French_Catalogue__c.field-meta.xml
<CustomField>
    <fullName>French_Catalogue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is an active product for France?</description>
    <label>French Catalogue</label>
    <type>Checkbox</type>
</CustomField>