force-app/main/default/objects/Product2/fields/Is_Archived__c.field-meta.xml
<CustomField>
    <fullName>Is_Archived__c</fullName>
    <formula>IsArchived  = true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Archived</label>
    <type>Checkbox</type>
</CustomField>