force-app/main/default/objects/Product2/fields/New_Drop_Substitute__c.field-meta.xml
<CustomField>
    <fullName>New_Drop_Substitute__c</fullName>
    <label>New/Drop/Substitute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo/New</fullName>
            </value>
            <value>
                <fullName>Baja/Drop</fullName>
            </value>
            <value>
                <fullName>Sustituto/Substitute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>