force-app/main/default/objects/Product2/fields/New_market_Catalogue__c.field-meta.xml
<CustomField>
    <fullName>New_market_Catalogue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is an active product for New Markets?</description>
    <label>New market Catalogue</label>
    <type>Checkbox</type>
</CustomField>