force-app/main/default/objects/Product2/fields/OM_Product_Code_SIP__c.field-meta.xml
<CustomField>
    <fullName>OM_Product_Code_SIP__c</fullName>
    <externalId>true</externalId>
    <label>Product Code SIP</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>