force-app/main/default/objects/Product2/fields/OM_SAC_generarespecificacionpaletizado__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_generarespecificacionpaletizado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Generar especificación paletizado</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products (Generar especificación paletizado)</relationshipLabel>
    <relationshipName>Products2</relationshipName>
    <type>Lookup</type>
</CustomField>