force-app/main/default/objects/Product2/fields/Pallet_Height__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Height__c</fullName>
    <description>Alto_palet__c from Spanish org</description>
    <label>Pallet Height</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>