force-app/main/default/objects/Product2/fields/Pallet_Weight__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Weight__c</fullName>
    <description>Pisos__c from Spanish org</description>
    <label>Pallet Weight</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>