force-app/main/default/objects/Product2/fields/Portuguese_Catalogue__c.field-meta.xml
<CustomField>
    <fullName>Portuguese_Catalogue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is an active product for Portugal?</description>
    <label>Portuguese Catalogue</label>
    <type>Checkbox</type>
</CustomField>