force-app/main/default/objects/Product2/fields/Spain_catalogue__c.field-meta.xml
<CustomField>
    <fullName>Spain_catalogue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is active in Spanish calalogue?</description>
    <label>Spanish catalogue</label>
    <type>Checkbox</type>
</CustomField>