force-app/main/default/objects/Product2/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Estado__c from Spanish org</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vigente</fullName>
            </value>
            <value>
                <fullName>Vigente - Preguntar fabricar/Pedir moldes</fullName>
            </value>
            <value>
                <fullName>Obsoleto</fullName>
            </value>
            <value>
                <fullName>Obsoleto comercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>