force-app/main/default/objects/Product2/fields/Substitute__c.field-meta.xml
<CustomField>
    <fullName>Substitute__c</fullName>
    <description>Tipo_modelo__c from Spanish org</description>
    <label>Substitute</label>
    <length>100</length>
    <type>Text</type>
</CustomField>