force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Colour__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Status__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Account__c</columns>
    <columns>Capacity__c</columns>
    <columns>Finish__c</columns>
    <columns>Weight__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.LAST_UPDATE</field>
        <operation>notEqual</operation>
        <value>2/4/2016 12:00 AM,2/25/2016 12:00 AM,7/5/2016 12:00 AM,7/15/2016 12:00 AM</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Vigente,Vigente - Preguntar fabricar/Pedir moldes</value>
    </filters>
    <label>Todos los productos</label>
</ListView>